kubernetes/apps/ca/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ca
spec:
  selector:
    app: ca
  ports:
    - { name: http, port: 80, targetPort: http }
